--- a/demo.html
+++ b/demo.html
@@ -1642,6 +1642,9 @@
 			<!-- 目的是显示来自一个单独的源的内容，
 				 可以在不离开父窗体的情况下有一些互动 -->
 			<!-- 子窗体可提供信息交互等 -->
+			<!-- $('#identifier').modal('toggle') 切换模态框状态 -->
+			<!-- $('#identifier').modal('show') 显示模态框 -->
+			<!-- $('#identifier').modal('hide') 隐藏模态框 -->
 			<div class="modal fade" id="myModal">
 				<!-- 可以通过添加 .modal-sm 类来创建一个小模态框，
 					 .modal-lg 类可以创建一个大模态框 -->
@@ -1663,6 +1666,31 @@
 					</div>
 				</div>
 			</div>
+			<br/>可以在js里切换模态框状态
+			<xmp>
+				$('#identifier').modal('toggle');//切换模态框状态
+				$('#identifier').modal('show');//显示模态框
+				$('#identifier').modal('hide');//隐藏模态框
+			</xmp>
+			<br/>可以在js里设置模态框垂直居中
+			<xmp>
+				/**
+				 * 垂直居中模态框 
+				 **/
+				function centerModals() { 
+					$('.modal').each(function(i) { 
+						var $clone = $(this).clone().css('display', 'block').appendTo('body'); 
+						var top = Math.round(($clone.height() - $clone.find('.modal-content').height()) / 2); 
+						top = top > 50 ? top : 0; 
+						$clone.remove(); 
+						$(this).find('.modal-content').css("margin-top", top - 50); 
+					}); 
+				} 
+				// 在模态框出现的时候调用垂直居中方法 
+				$('.modal').on('show.bs.modal', centerModals); 
+				// 在窗口大小改变的时候调用垂直居中方法 
+				$(window).on('resize', centerModals);
+			</xmp>
 			
 			<div class="demo-title">提示框</div>
 			<!-- 提示框 -->
